[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
anyhow = "1.0.75"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
pico-args = "0.5.0"
range-ext = "0.3.0"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
